# mtuci-rs

./: Cargo.toml
chap1/src/: main.rs
chap2/: Cargo.toml
chap3/: Cargo.toml
chap4/: Cargo.toml
chap4/src/: slices.rs
homework2/: task1.rs  task2.rs
rustlings/: quiz1.rs
rustlings hw2/enums/: enums2.rs
rustlings hw2/move_semantics/: move_semantics2.rs  move_semantics4.rs  move_semantics6.rs
rustlings hw2/structs/: structs1.rs  structs2.rs  structs3.rs
rustlings hw2/vecs/: vecs1.rs  vecs2.rs
rustlings hw3/hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
rustlings hw3/modules/: modules3.rs
rustlings hw3/strings/: strings3.rs
rustlings hw4/error_handling/: errors1.rs  errors4.rs  errors5.rs  errors6.rs
rustlings hw4/generics/: generics1.rs  generics2.rs
rustlings hw4/options/: options1.rs  options3.rs
rustlings hw4/traits/: traits1.rs  traits2.rs
rustlings hw5/conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs
rustlings hw5/iterators/: iterators1.rs  iterators2.rs  iterators4.rs  iterators5.rs
rustlings/if/: if1.rs  if2.rs
rustlings/intro/: intro2.rs
rustlings/primitive_types/: primitive_types2.rs  primitive_types5.rs
rustlings/variables/: variables5.rs
