[package]
name = "chap3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "var"
path = "src/variables.rs"

[[bin]]
name = "types"
path = "src/datatypes.rs"

[[bin]]
name = "funct"
path = "src/functions.rs"

[[bin]]
name = "shad"
path = "src/shading.rs"

[dependencies]
